--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,28 @@
 	padding: 0;
 }
 
-.my-navbar{
-    background-color: #076797;
-    font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", sans-serif;
+.mynav{
+	background-image: url("../images/navbar.jpg");
+	height: 500px;
+	background-size: cover
+}
+
+.navbar{
+    background-color: transparent;
+}
+
+.name{
+	font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    font-size: 40px;
+	color: #FFFFFF;
+}
+
+.nav-item {
+	font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-size: x-large;
+	color: #FFFFFF;
 }
 
 .logo {
@@ -18,8 +35,12 @@
 }
 
 body {
-	background-color: #D6E9FA;
+	background-color: #FFFFFF;
 	color: #000000; 
+}
+
+.intro{
+	background-color: #D6E9FA
 }
 
 video {
@@ -28,18 +49,97 @@ video {
 }
 
 
+.lead {
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-weight:600;
+	font-size:large ;
+	color: #FFFFFF;
+}
 
 p {
-	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
-    font-variant: normal;
-    font-weight: bold;
-    font-size: large;
-    color: #000000;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-weight: bolder;
+	font-size:large ;
+	color: #FFFFFF;
+}
+
+h1{
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+	text-align: center;
+}
+
+h2{
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+}
+
+h3{
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+}
+
+.features{
+	background-color: #D6E9FA
 }
 
 .jumbotron {
+	background-color: #FFFFFF;
+}
+
+.about{
+	background-color: #D6E9FA;
+	border-bottom: 5px solid #57AFFF;
+}
+
+.abouts{
+	font-family: 'Montserrat', sans-serif;
+	color: #FFFFFF;
+}
+
+.mission{
+	background-color: #D6E9FA;
+	border-right: 5px solid #57AFFF;
+	border-bottom: 5px solid #57AFFF;
+}
+
+.vision{
+	background-color: #D6E9FA;
+	border-left: 5px solid #57AFFF;
+	border-bottom: 5px solid #57AFFF;
+}
+
+.testimonials{
 	background-color: #D6E9FA;
 }
 
+.anja{
+	border-right: 5px solid #57AFFF;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-weight: bolder;
+	font-size:large ;
+	color: #FFFFFF;
+}
 
+.susan{
+	border-right: 5px solid #57AFFF;
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-weight: bolder;
+	font-size:large ;
+	color: #FFFFFF;
+}
 
+.peter{
+	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-weight: bolder;
+	font-size:large ;
+	color: #FFFFFF;
+}
+
+footer{
+	background-color: #D6E9FA;
+}
+
+.logos{
+	height:100px;
+}
